<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="travel"
            type="com.lgcns.crossdev.onboarding1.test.model.Travel" />
        <variable
            name="viewModel"
            type="com.lgcns.crossdev.onboarding1.presentation.ui.travelList.TravelListViewModel" />
    </data>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:layout_gravity="center"
        app:cardCornerRadius="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_gravity="center">


            <TextView
                android:id="@+id/tvDialogTitle"
                android:text="@string/add_travel_label"
                style="@style/DialogTitleTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageButton
                android:id="@+id/btnClose"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:background="@drawable/background_button_ripple"
                android:src="@drawable/ic_close_black"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="@id/tvDialogTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvDialogTitle" />
            <View
                android:id="@+id/dialogDivider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/grayE0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDialogTitle"/>

            <EditText
                android:id="@+id/tvTravelTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:cursorVisible="false"
                android:gravity="center"
                android:text="@{travel.title}"
                android:hint="@string/input_travel_title_msg"
                android:inputType="text"
                android:padding="12dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogDivider" />

            <TextView
                android:id="@+id/tvCurrencyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/currency_label"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTravelTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="6dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCurrencyTitle"
                app:listData="@{viewModel.selectedCurrencyCodes}"
                tools:listitem="@layout/item_currency" />
            <TextView
                android:id="@+id/tvDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="25dp"
                android:text="@string/travel_date_label"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvCurrency" />


            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@{travel.dateStart!=null ? travel.dateStart+` ~ `+travel.dateEnd : @string/select_date_guide}"
                android:gravity="center"
                android:textColor="@color/gray66"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDateTitle"
                android:padding="10dp"/>


            <TextView
                android:id="@+id/tvThumbnailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="25dp"
                android:text="@string/cover_pic_label"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDate" />

            <ImageView
                android:id="@+id/ivThumbnail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                setVisible="@{travel.img != null}"
                app:layout_constraintDimensionRatio="16:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvThumbnailTitle"
                app:srcCompat="@null" />

            <TextView
                android:id="@+id/tvThumbnailGuide"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/input_picture_guide"
                android:textColor="@color/lightGray"
                app:layout_constraintDimensionRatio="16:9"
                app:layout_constraintEnd_toEndOf="parent"
                setVisible="@{travel.img == null}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvThumbnailTitle" />

            <Button
                android:id="@+id/btnOk"
                style="@style/BlueButtonStyle"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="17dp"
                android:text="@string/confirm_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivThumbnail" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
