<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:layout_gravity="center"
        app:cardCornerRadius="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvDialogTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/input_time_label"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black33"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageButton
                android:id="@+id/btnClose"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:background="@drawable/background_button_ripple"
                android:src="@drawable/ic_close_black"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="@id/tvDialogTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvDialogTitle" />

            <View
                android:id="@+id/dialogDivider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/grayE0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDialogTitle"/>

            <TimePicker
                android:id="@+id/timePicker"
                android:theme="@style/timePickerTheme"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogDivider" />


            <LinearLayout
                android:id="@+id/dialogLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingBottom="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timePicker">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCancel"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/button_background_dialog_cancel"
                    android:minHeight="0dp"
                    android:paddingVertical="10dp"
                    android:paddingLeft="22dp"
                    android:paddingRight="22dp"
                    android:text="@string/cancel_label"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnOk"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/button_background_dialog_ok"
                    android:minHeight="0dp"
                    android:paddingVertical="10dp"
                    android:paddingLeft="22dp"
                    android:paddingRight="22dp"
                    android:text="@string/confirm_label"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
